Allow compilation with any Java version