@@ -8,6 +8,7 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <jdk.add.opens></jdk.add.opens>
   </properties>
 
   <scm>
@@ -43,6 +44,14 @@
 
   <build>
     <plugins>
+     <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.5.2</version>
+          <configuration>
+              <argLine>${jdk.add.opens}</argLine>
+          </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -147,6 +156,33 @@
   </distributionManagement>
 
   <profiles>
+    <profile>
+      <id>java11plus</id>
+      <activation>
+         <jdk>[11,)</jdk>
+          <!-- property>
+              <name>java.specification.version</name>
+              <regex>(1[1-9]|[2-9][0-9])(\..*)?</regex>
+          </property -->
+      </activation>
+      <properties>
+          <jdk.add.opens>--add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED</jdk.add.opens>
+      </properties>
+  </profile>
+
+  <!-- Profile for Java 8 -->
+  <profile>
+      <id>java8</id>
+      <activation>
+        <jdk>1.8</jdk>
+          <!-- property>
+              <name>java.specification.version</name>
+              <value>1.8</value>
+          </property -->
+      </activation>
+      <!-- No additional JVM arguments needed -->
+  </profile>
+
   <profile>
     <id>release</id>
     <build>
